# active_matter

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
active_matter/: R_orderParameter2.py  R_orderParameter3.py  R_orderparameter.py  boids.py  boids_prey.py  density_const.py  exponent.py  noise_order.py  vicsekModel.py  vicsekModel3.py  vicsek_boundary_none.py  vicsek_enemy.py
