[tool.poetry]
name = "active-matter"
version = "0.1.0"
description = ""
authors = ["rinka0v0 <rinka0v0@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "active_matter"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
vispy = "^0.11.0"
PyQt5 = "^5.15.7"
matplotlib = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
